# server-repo-rust

./: .gitignore  Git Son Versiyanı Çəkmək.md  README.md  build_and_push_masterdeploy_local.py  config.json  gite_gonder_yeni.py  github_repo_manager.py  install.ps1  install.sh  install_remote.sh  installer_gui.py  installer_gui.py.mybackup  remote_installer.py  remote_installer.py.mybackup  run_project.py  run_test_project.py  ssh-key-MasterDeploy.key
.agents/: AGENTS.md
.agents/history/: sohbet_27_iyun_2026.md
.agents/rules/: changelog_and_docs.md  token.md
.github/workflows/: docker-build.yml
MasterDeploy-rust/: .dockerignore  Cargo.toml  Dockerfile  masterdeploy.db
MasterDeploy-rust/src/: db.rs  main.rs  models.rs
MasterDeploy-rust/src-tauri/: tauri.conf.json
MasterDeploy-rust/src/plugins/: cloudflare.rs  mod.rs
MasterDeploy-rust/static/: app.js  changelog.json  docs.json  index.html  style.css  sw.js
backup_static/: app.js  changelog.json  index.html  style.css
coolify-rust/: Cargo.toml  Dockerfile  coolify.db
coolify-rust/src/: db.rs  main.rs
coolify-rust/static/: app.js  index.html  style.css
test-layihe/: .dockerignore  Dockerfile  database.db  index.js  package-lock.json  package.json
test-layihe/public/: index.html
