[package]
name = "masterdeploy-rust"
version = "1.0.52"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-http = { version = "0.5.1", features = ["cors", "fs", "set-header"] }
serde_json = "1.0.150"

[profile.release]
opt-level = "s"
lto = false
codegen-units = 16
debug = false
